--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         <div class="uni-cgpa">
                             <p>Universiti Teknologi Malaysia <strong>(UTM)</strong></p>
                             <p>Graduated in <strong>September 2020</strong> with CGPA 3.27</p>
+                            <p>Javascript Cert <a href="https://www.sololearn.com/certificates/course/en/4417947/1024/landscape/png">click to view</a></p>
                         </div>
                         <div class="course-fyp">
                             <p>Bachelor in Computer Science <strong>(Networks and Security)</strong></p>
